objects/Opportunity_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>ATCV_DMS__c</fullName>
        <label>ATCV (DMS)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATCV_estimate__c</fullName>
        <label>ATCV (estimate)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP_Maint__c</fullName>
        <label>Bookings CCP Maint</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP_Prod__c</fullName>
        <label>Bookings CCP Prod</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP__c</fullName>
        <label>Bookings CCP</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_HW_Maint__c</fullName>
        <label>Bookings HW Maint</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_HW_Prod__c</fullName>
        <label>Bookings HW Prod</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Hardware__c</fullName>
        <label>Bookings Hardware</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP__c</fullName>
        <label>Bookings IP</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SW_Maint__c</fullName>
        <label>Bookings SW Maint</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SW_Prod__c</fullName>
        <label>Bookings SW Prod</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Services__c</fullName>
        <label>Bookings Services</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Software__c</fullName>
        <label>Bookings Software</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculations_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculations Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Close Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maint_TCV_PREVDAY__c</fullName>
        <label>Maint TCV PREVDAY</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_TCV_PREVWEEK__c</fullName>
        <label>Maint TCV PREVWEEK</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_TCV__c</fullName>
        <label>Maint TCV</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to create a lookup relationship to the Opportunity so that the Opportunity Owner information can be displayed on the snapshot report</description>
        <label>Opportunity Owner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability_PREVDAY__c</fullName>
        <label>Probability PREVDAY</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_PREVWEEK__c</fullName>
        <label>Probability PREVWEEK</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prod_TCV_PREVDAY__c</fullName>
        <label>Prod TCV PREVDAY</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_TCV_PREVWEEK__c</fullName>
        <label>Prod TCV PREVWEEK</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_TCV__c</fullName>
        <label>Prod TCV</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_PREVDAY__c</fullName>
        <label>Revenue PREVDAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_PREVWEEK__c</fullName>
        <label>Revenue PREVWEEK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>This field captures the date of the snapshot</description>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_PREVDAY__c</fullName>
        <label>Status_PREVDAY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_PREVWEEK__c</fullName>
        <label>Status_PREVWEEK</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV_P_AND_M_PREVDAY__c</fullName>
        <label>TCV P &amp; M PREVDAY</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV_P_AND_M_PREVWEEK__c</fullName>
        <label>TCV P &amp; M PREVWEEK</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV_P_AND_M__c</fullName>
        <label>TCV P &amp; M</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV_USD__c</fullName>
        <label>TCV (USD)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_PREVDAY__c</fullName>
        <label>Term PREVDAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_PREVWEEK__c</fullName>
        <label>Term PREVWEEK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Services_Amount_PREVDAY__c</fullName>
        <label>Total Services Amount PREVDAY</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Services_Amount_PREVWEEK__c</fullName>
        <label>Total Services Amount PREVWEEK</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Services_Amount__c</fullName>
        <label>Total Services Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_PREVDAY__c</fullName>
        <label>Transaction Type PREVDAY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_PREVWEEK__c</fullName>
        <label>Transaction Type PREVWEEK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>99-YR/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAgold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAplat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA-Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - 99 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ren Maint HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM - Altos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM - Azuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>